# tray_click

./: Cargo.toml  LICENSE  README.md
.github/workflows/: check-version.yml  ci.yml
examples/: calculator.toml  echo_a.toml  sway_fhd_resolution.toml  sway_uhd_resolution.toml
src/: entries.rs  entry.rs  main.rs  tray.rs
src/entries/: custom.rs  echo.rs  exit.rs  notification_disable.rs  notification_enable.rs  notification_test.rs
