[package]
name = "tray_click"
version = "0.1.0"
authors = ["Tamino Bauknecht <dev@tb6.eu>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
glib = "^0.14"
gtk = "^0.14"
tray-item = "^0.6.0"
clap = "^2.33.3"
toml = "^0.5.8"
serde = "^1.0.48"
serde_derive = "^1.0.117"
